--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PruebaPractica2">
         <activity
+            android:name=".ui.Cita"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.client.favoritos.FavoritosActivity"
             android:exported="false" />
         <activity
@@ -23,15 +37,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
-            android:theme="@style/Splash"
-            android:exported="true"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.admin.automovil.NewAutoActivity"
             android:exported="true" />
